--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Abolfazl Maherani",
+    "email": "mahrani.work@gmail.com"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
