--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abolfazl-maherani.github.io/todolist-react",
+  "homepage": "/",
   "author": {
     "name": "Abolfazl Maherani",
     "email": "mahrani.work@gmail.com"
